Finishing the server
