# server/swagger_output.json
@@ -343,6 +343,12 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -360,13 +366,7 @@
                 "userId": {
                   "example": "any"
                 },
-                "friendUser": {
-                  "example": "any"
-                },
-                "displayName": {
-                  "example": "any"
-                },
-                "Image": {
+                "friendUserId": {
                   "example": "any"
                 }
               }
